--- a/notebooks/hwalker_jumpstart_analysis.ipynb
+++ b/notebooks/hwalker_jumpstart_analysis.ipynb
@@ -844,106 +844,29 @@
    "id": "839b90e9",
    "metadata": {},
    "source": [
-    "> Use __.unique()__ to confirm the null values were removed."
+    "> You can also check the number of null values by chaining the `isna( )` and `sum( )` methods together.<br>\n",
+    "> The reason this works is that Python will treat True as 1 and False as 0 when doing arithmetic on Booleans."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "2738f531",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['CITATION - TRAFFIC', 'SUBJECT WARNED', 'ASSISTED OTHER UNIT',\n",
-       "       'GONE ON ARRIVAL', 'ASSISTED CITIZEN', 'COMMUNITY POLICING',\n",
-       "       'LOCATION/BUILDING SECURE', 'DISREGARD / SIGNAL 9',\n",
-       "       'M.P.D. REPORT COMPLED', 'ADVISED IN CIVIL CASE', 'FALSE CALL',\n",
-       "       'NO RESPONSE', 'ARREST, CUSTODIAL OR CITATION',\n",
-       "       'ASSISTANCE REFUSED', 'ADVISORY / NOTICE FORM GIVEN'], dtype=object)"
+       "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "police_calls['disposition_desc'].unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77c78ac5",
-   "metadata": {},
-   "source": [
-    "> Alternatively, use __.isna()__ to confirm there are no null values left."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c50f3407",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         False\n",
-       "1         False\n",
-       "2         False\n",
-       "3         False\n",
-       "4         False\n",
-       "          ...  \n",
-       "718016    False\n",
-       "718017    False\n",
-       "718018    False\n",
-       "718019    False\n",
-       "718020    False\n",
-       "Name: disposition_desc, Length: 717888, dtype: bool"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "police_calls.disposition_desc.isna()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "64f406d9",
-   "metadata": {},
-   "source": [
-    "> Or we could even use __.info()__ to check for null values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "7f8c730e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Int64Index: 717888 entries, 0 to 718020\n",
-      "Series name: disposition_desc\n",
-      "Non-Null Count   Dtype \n",
-      "--------------   ----- \n",
-      "717888 non-null  object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 11.0+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "police_calls.disposition_desc.info()"
+    "police_calls['disposition_desc'].isna().sum()"
    ]
   },
   {
@@ -974,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "7a822957",
    "metadata": {},
    "outputs": [
@@ -989,7 +912,7 @@
        "       'ADVISORY / NOTICE FORM GIVEN'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea39ce40",
+   "id": "a103ded8",
    "metadata": {},
    "source": [
     "> Get value counts for __tencode__ and __tencode_desc__. This will return the values as a __series__ (not a DataFrame)."
@@ -1114,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4964f36d",
+   "id": "dfdb35a6",
    "metadata": {},
    "source": [
     "> Use __reset_index()__ to turn the series into a DataFrame while adding an index column."
@@ -1187,7 +1110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4494d80",
+   "id": "2b406a7d",
    "metadata": {},
    "source": [
     "> Drop the column __tencode__ that has the 2-digit tencode."
@@ -1257,7 +1180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b9bcda3",
+   "id": "ee0e58fa",
    "metadata": {},
    "source": [
     "> Rename the columns."
@@ -1265,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "bff85f53",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1214,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>tencode</th>\n",
-       "      <th>0</th>\n",
+       "      <th>tencode_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1310,12 +1233,12 @@
        "</div>"
       ],
       "text/plain": [
-       "             tencode       0\n",
-       "0     Business Check  154763\n",
-       "1  Traffic Violation  141283"
+       "             tencode  tencode_count\n",
+       "0     Business Check         154763\n",
+       "1  Traffic Violation         141283"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1246,7 @@
    "source": [
     "tencode_counts = tencode_counts.rename(columns = {\n",
     "    'tencode_desc' : 'tencode',\n",
-    "    '0': 'tencode_count',\n",
+    "    0: 'tencode_count',\n",
     "})\n",
     "tencode_counts.head(2)"
    ]
@@ -1331,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf97054",
+   "id": "748e3768",
    "metadata": {},
    "outputs": [],
    "source": []
