--- a/notebooks/hwalker_jumpstart_analysis.ipynb
+++ b/notebooks/hwalker_jumpstart_analysis.ipynb
@@ -15,6 +15,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7f1974f",
+   "metadata": {},
+   "source": [
+    "`pandas` is Python Library<br>\n",
+    "`matplotlib.pyplot` is Matplotlib -- a comprehensive library for creating static, animated, and interactive visualizations in Python.<br>\n",
+    "`seaborn` is Seaborn is a Python data visualization library based on matplotlib.<br>\n",
+    "`sqlite3` is SQLite is a database engine written in the C language.<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4baf9ed7",
@@ -26,18 +37,6 @@
     "import seaborn as sns\n",
     "import sqlite3 as sql\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfc9feb5",
-   "metadata": {},
-   "source": [
-    "<style>\n",
-    ".alert-green {\n",
-    "  color: rgb(60,118,61) !important;\n",
-    "}\n",
-    "</style>"
    ]
   },
   {
@@ -1004,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a103ded8",
+   "id": "de570a78",
    "metadata": {},
    "source": [
     "> Get value counts for __tencode__ and __tencode_desc__. This will return the values as a __series__ (not a DataFrame)."
@@ -1037,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfdb35a6",
+   "id": "83fbe922",
    "metadata": {},
    "source": [
     "> Use __reset_index()__ to turn the series into a DataFrame while adding an index column."
@@ -1110,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b406a7d",
+   "id": "6b038dd7",
    "metadata": {},
    "source": [
     "> Drop the column __tencode__ that has the 2-digit tencode."
@@ -1180,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0e58fa",
+   "id": "fc788cd0",
    "metadata": {},
    "source": [
     "> Rename the columns."
@@ -1252,9 +1251,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74bb88fd",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# 8. Create a seaborn horizontal barplot to show the 2018 calls for police service by tencode.\n",
+    "- Adjust the figsize so that you can see all of the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748e3768",
+   "id": "6058259b",
    "metadata": {},
    "outputs": [],
    "source": []
