--- a/notebooks/hwalker_jumpstart_analysis.ipynb
+++ b/notebooks/hwalker_jumpstart_analysis.ipynb
@@ -5785,13 +5785,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "756df611",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "# 20. Create a connection to the survey data (*metro_survey.db*) and then create a cursor in order to find all the available tables in the database.\n",
+    "<mark>They should match the tables shown on the *metro_survey_ERD* diagram.</mark>\n",
+    "\n",
+    "![metro_survey_ERD](../metro_survey_ERD.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5fa9a885",
+   "execution_count": 1,
+   "id": "3ff0173e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "import sqlite3 as sql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c291a1c2",
+   "metadata": {},
+   "source": [
+    "### Creating a connection to the poetry_kids.db database\n",
+    " - tell python what database to connect to (`sql.connect( )`)\n",
+    " - create a cursor to allow passing queries directly to the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0aa5ac99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sql.connect('../data/metro_survey.db')\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f01daf1e",
+   "metadata": {},
+   "source": [
+    "### Checking what tables exist within a database\n",
+    "- the cursor executes the SQL query passed to `.execute( )`\n",
+    "- the results of your query are loaded to the cursor\n",
+    "- the `fetchall()` method returns those results so you can store them in a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2a8b674b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('codes',),\n",
+       " ('equality_and_access',),\n",
+       " ('general_services',),\n",
+       " ('info',),\n",
+       " ('overall',),\n",
+       " ('recreation',),\n",
+       " ('safety',),\n",
+       " ('transportation',)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Execute tells the cursor to run the query provided\n",
+    "\n",
+    "cur.execute(\"SELECT name FROM sqlite_master WHERE type='table' ORDER BY name;\")\n",
+    "\n",
+    "# fetchall() allows us to see everything returned by our query, which we store in our 'available_tables' variable\n",
+    "\n",
+    "available_tables = (cur.fetchall())\n",
+    "\n",
+    "available_tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "510f13cf",
+   "metadata": {},
+   "source": [
+    "## Using Pandas to place results into a DataFrame\n",
+    "\n",
+    "We can SQL queries and convert the result to a _pandas_ DataFrame by using the `read_sql` method.\n",
+    "\n",
+    "When building SQL queries, it may be useful to write the query independently and save to variable. Multi-line queries can use triple quotes (''' ''') to keep it together as one string.\n",
+    "\n",
+    "For example, if we want to find the very short poems, we can use the following code. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3126ec12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "SELECT text\n",
+    "FROM poem\n",
+    "WHERE char_count < 20;\n",
+    "'''\n",
+    "\n",
+    "pd.read_sql(query, conn)"
    ]
   }
  ],
