--- a/class_notebooks/notebook_06_combining_dataframes.ipynb
+++ b/class_notebooks/notebook_06_combining_dataframes.ipynb
@@ -271,13 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m combined_data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mmerge(\\\n\u001b[1;32m      2\u001b[0m     products, sales_2012,\\\n\u001b[1;32m      3\u001b[0m     how \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mright\u001b[39m\u001b[38;5;124m'\u001b[39m,\\\n\u001b[1;32m      4\u001b[0m     on \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSale_ID\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      5\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "combined_data = pd.merge(products, sales_2012, how = 'right', on = 'Sale_ID')"
+    "combined_data = pd.merge(\\\n",
+    "    products, sales_2012,\\\n",
+    "    how = 'right',\\\n",
+    "    on = 'Sale_ID'\n",
+    ")"
    ]
   },
   {
